Update versions and go to java 17